Fix spacing

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header strong {
 }
 
 .max-width-wrapper {
-  padding: 8px 16px;
+  padding: 8px 24px;
   background-color: white;
   margin: auto;
   max-width: 560px;
